<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/rich_black"
    android:orientation="vertical">
    <ImageButton
        android:layout_margin="10dp"
        android:id="@+id/back_to_SSA"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/baseline_arrow_back_hovered"
        android:backgroundTint="@color/rich_black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/golden"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="55sp"
        android:gravity="center"
        android:layout_marginTop="75dp">
    </TextView>
    <EditText
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/UsernameLog"
        android:hint="@string/username"
        android:layout_marginTop="150dp"
        android:textColor="@color/cadet_gray"
        android:textColorHint="@color/cadet_gray"
        android:backgroundTint="@color/cadet_gray"
        android:layout_width="match_parent"
        android:layout_height="60sp">
    </EditText>
    <EditText
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/cadet_gray"
        android:textColor="@color/cadet_gray"
        android:textColorHint="@color/cadet_gray"
        android:id="@+id/PasswordLog"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60sp">
    </EditText>
    <CheckBox
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/LoginRemember"
        android:layout_width="match_parent"
        android:textColorHint="@color/cadet_gray"
        android:textColor="@color/cadet_gray"
        android:backgroundTint="@color/cadet_gray"
        android:layout_height="30dp"
        android:gravity="left|center"
        android:text="@string/remember_me"
        android:textSize="16sp">
    </CheckBox>
    <Button
        android:layout_margin="10dp"
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textSize="32sp"
        android:backgroundTint="@color/rich_black"
        android:textColor="@color/golden"
        android:fontFamily="sans-serif-condensed-medium">
    </Button>
</LinearLayout>