<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/rich_black"
    tools:context=".RegistrationActivity">
    <ImageButton
        android:layout_margin="10dp"
        android:id="@+id/back_to_SSA"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/baseline_arrow_back_hovered"
        android:backgroundTint="@color/rich_black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.SignUpFragment"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:textColor="@color/golden"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:text="@string/registration"
            android:fontFamily="sans-serif-condensed-medium"
            android:textSize="55sp"
            android:gravity="center">
        </TextView>
        <TextView
            android:id="@+id/ErrorText"
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/TEST_RED"
            android:text="">
        </TextView>
        <EditText
            android:id="@+id/UsernameReg"
            android:hint="@string/username"
            android:textColorHint="@color/cadet_gray"
            android:backgroundTint="@color/cadet_gray"
            android:textColor="@color/cadet_gray"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60sp">
        </EditText>
        <EditText
            android:id="@+id/EmailReg"
            android:hint="@string/email"
            android:textColorHint="@color/cadet_gray"
            android:backgroundTint="@color/cadet_gray"
            android:textColor="@color/cadet_gray"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60sp">
        </EditText>
        <EditText
            android:id="@+id/PasswordReg"
            android:hint="@string/password"
            android:textColorHint="@color/cadet_gray"
            android:backgroundTint="@color/cadet_gray"
            android:textColor="@color/cadet_gray"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60sp">
        </EditText>

        <CheckBox
            android:id="@+id/RegRemember"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/cadet_gray"
            android:gravity="left|center"
            android:text="@string/remember_me"
            android:textColor="@color/cadet_gray"
            android:textColorHint="@color/cadet_gray"
            android:textSize="16sp"></CheckBox>

        <Button
            android:id="@+id/Registration"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/register"
            android:textColor="@color/golden"
            android:background="@drawable/frame_thin_et"
            android:inputType="text"
            android:textSize="32sp"
            android:fontFamily="sans-serif-condensed-medium">
        </Button>

    </LinearLayout>

</LinearLayout>