<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rich_black"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="300dp"
        android:layout_height="440dp"
        android:background="@drawable/frame"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:gravity="center">

        <Button

            android:id="@+id/registration"
            android:layout_height="60dp"
            android:layout_width="180dp"
            android:textColor="@color/golden"
            android:background="@drawable/frame_thin_et"
            android:padding="10dp"
            android:inputType="text"
            android:textSize="25sp"
            android:text="@string/registration"/>
        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/login"
            android:layout_height="60dp"
            android:layout_width="180dp"
            android:textColor="@color/golden"
            android:background="@drawable/frame_thin_et"
            android:inputType="text"
            android:padding="10dp"
            android:textSize="25sp"
            android:text="@string/login"/>
        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/history"
            android:layout_height="60dp"
            android:layout_width="180dp"
            android:textColor="@color/golden"
            android:inputType="text"
            android:background="@drawable/frame_thin_et"
            android:padding="10dp"
            android:textSize="25sp"
            android:text="@string/history"/>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>