<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/rich_black"
    tools:context=".car_tax_activity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/RL1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <ImageButton
            android:id="@+id/back_to_SSA"
            android:layout_margin="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_hovered"
            android:background="@null"

            />
        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/car" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cadet_gray"
            android:text="@string/region"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <Spinner
            android:layout_gravity="center_vertical|end"
            android:layout_margin="10dp"
            android:background="@drawable/frame"
            android:id="@+id/spinner_regions"
            android:gravity="center_vertical"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cadet_gray"
            android:text="@string/vehicle_type"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <Spinner
            android:layout_gravity="center_vertical|end"
            android:layout_margin="10dp"
            android:background="@drawable/frame"
            android:id="@+id/spinner_vehicle_types"
            android:gravity="center_vertical"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cadet_gray"
            android:text="@string/months_of_ownership"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <Spinner
            android:layout_gravity="center_vertical|end"
            android:layout_margin="10dp"
            android:background="@drawable/frame"
            android:id="@+id/spinner_months_of_ownership"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cadet_gray"
            android:text="@string/horsepower"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <EditText
            android:textColor="@color/cadet_gray"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="10dp"
            android:background="@drawable/frame"
            android:id="@+id/horsepower_ET"
            android:layout_width="170dp"
            android:inputType="numberSigned"
            android:layout_height="wrap_content"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_gravity="center_vertical|start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cadet_gray"
            android:text="@string/release_date"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <Spinner
            android:textColor="@color/cadet_gray"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="10dp"
            android:background="@drawable/frame"
            android:id="@+id/release_date_spinner"
            android:layout_width="170dp"
            android:inputType="numberSigned"
            android:layout_height="wrap_content"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <Button
        android:layout_margin="10dp"
        android:id="@+id/calc_car_tax"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/golden"
        android:backgroundTint="@color/rich_black"
        android:textSize="25sp"
        android:text="@string/calculate"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:padding="10dp"
            android:layout_margin="10dp"
            android:id="@+id/TV_car_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cadet_gray"

            android:background="@drawable/frame"
            android:textSize="25sp"
            android:text=""
            android:visibility="invisible"
            />
        <ImageButton
            android:layout_marginStart="5dp"
            android:id="@+id/add_to_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_add_24"
            android:visibility="invisible"
            android:tooltipText=""
            android:background="@null"/>
    </LinearLayout>


</LinearLayout>